[gd_scene load_steps=5 format=3 uid="uid://q51r3apcajxm"]

[ext_resource type="Script" path="res://Scripts/First.gd" id="1_kyjhm"]
[ext_resource type="Texture2D" uid="uid://db4jyx124anwg" path="res://1083.jpg" id="2_8ctdp"]
[ext_resource type="Texture2D" uid="uid://c4q1jsk4xkf6y" path="res://amo-04.png" id="3_nq5mk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u77l"]
size = Vector2(16, 16)

[node name="Menu" type="Node2D"]
script = ExtResource("1_kyjhm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7u77l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="1083" type="Sprite2D" parent="."]
position = Vector2(608.989, 324)
scale = Vector2(0.208026, 0.208026)
texture = ExtResource("2_8ctdp")

[node name="Button" type="Button" parent="."]
offset_left = 64.0
offset_top = 128.0
offset_right = 316.0
offset_bottom = 192.0
scale = Vector2(1.01533, 1.01533)
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = 64.0
offset_top = 256.0
offset_right = 316.0
offset_bottom = 320.0
scale = Vector2(1.01533, 1.01533)
text = "Select Character"

[node name="Button3" type="Button" parent="."]
offset_left = 64.0
offset_top = 384.0
offset_right = 316.0
offset_bottom = 448.0
scale = Vector2(1.01533, 1.01533)
text = "Exit"

[node name="Amo-04" type="Sprite2D" parent="."]
position = Vector2(744, 376)
scale = Vector2(0.0789474, 0.0789474)
texture = ExtResource("3_nq5mk")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
